--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Yana Lebed</a>
+        <a class="navbar-brand" href="index.html"><strong>Yana Lebed</strong></a>
         <button
           class="navbar-toggler"
           type="button"
