--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     <h1>Yana Lebed</h1>
     <h3>🇺🇦 Front-end developer, based in Ukraine</h3>
     <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="contact-link">Contact me</a>
-      <a href="about.html" class="about-link">About me</a>
+      <a href="about.html#contact" class="contact-link" title="Yana Lebed">Contact me</a>
+      <a href="about.html" class="about-link" title="front-end">About me</a>
     </div>
   </div>
   <div class="container-fluid">
