--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <div class="container-fluid">
       <div class="row">
         <div class="col-sm-6 col-md-6">
-            <img src="images/yoga.png" class="img-fluid" />
+            <img src="images/yoga.png" class="img-fluid" alt="yoga"/>
           </div>
         <div class="col-sm-6 col-md-6">
          <p>Yoga app
@@ -70,7 +70,7 @@
          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis harum.
         <br/>
          </br>
-         <a href="#" class="primary-link">Launch Yoga App</a>
+         <a href="#" class="primary-link" alt="yoga">Launch Yoga App</a>
         </p>
         
         </div>
@@ -80,14 +80,14 @@
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis harum.
                 <br/>
             </br>
-                <a href="#" class="primary-link">Launch Weather App</a>        
+                <a href="#" class="primary-link" alt="weather">Launch Weather App</a>        
           </p>      
           </div>
         <div class="col-sm-6 col-md-6">
-        <img src="images/weather.png" class="img-fluid" />
+        <img src="images/weather.png" class="img-fluid" alt="weather"/>
         </div>
         <div class="col-6">
-          <img src="images/yogurt.png" class="img-fluid" />
+          <img src="images/yogurt.png" class="img-fluid" alt="yogurt" />
         </div>
        <div class="col-sm-6 col-md-6">
       <p>Yogurt app
@@ -95,7 +95,7 @@
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis harum.
     <br/>
       </br>
-    <a href="#" class="primary-link">Launch Yogurt App</a>         
+    <a href="#" class="primary-link" alt="yogurt">Launch Yogurt App</a>         
   </p>                  
       </div>
     </div>
