--- a/about.html
+++ b/about.html
@@ -84,13 +84,13 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/yoga.png" class="img-fluid p-2 shadow rouned" alt="yoga" />
+          <img src="images/yoga.png" class="img-fluid p-2 mb-5 shadow rouned" alt="yoga" />
         </div>
         <div class="col-sm-4">
-          <img src="images/weather.png" class="img-fluid p-2 shadow rouned" alt="weather"/>
+          <img src="images/weather.png" class="img-fluid p-2 mb-5 shadow rouned" alt="weather"/>
         </div>
         <div class="col-sm-4">
-          <img src="images/yogurt.png" class="img-fluid p-2 shadow rouned" alt="yogurt" />
+          <img src="images/yogurt.png" class="img-fluid p-2 mb-5 shadow rouned" alt="yogurt" />
         </div>
       </div>
     </div>
